modified header style, fixed horizontal scrolling

--- a/src/app/components/footer/footer.css
+++ b/src/app/components/footer/footer.css
@@ -1,3 +1,6 @@
 footer {
     padding: 0.5em;
+    bottom: 0;
+    position: relative;
+    width: 100%;
 }
