--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,4 +1,17 @@
 .navbar {
     padding: 10px;
-    opacity: 80%;
+    /* opacity: 90%; */
+    box-shadow: 10px 30px 20px rgba(0, 0, 0, 0.5);
+    display: flex;
+}
+
+#header {
+    position: relative;
+    width: 100%;
+    top: 0;
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  color: var(--turquoise-2) !important;
 }
